<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            app:title="随机数生成器"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">
        
        <EditText
            android:id="@+id/edittext_random_min"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:maxLength="9"
            android:hint="输入最小值"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edittext_random_max"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:inputType="number"
            android:maxLength="9"
            android:hint="输入最大值"
            android:gravity="center"/>
    </LinearLayout>
    
    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/textview_random_number"
        android:textSize="90sp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center" />

    <Button
        android:id="@+id/random_generate"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="生成"
        android:textColor="#FFFFFF"/>

</LinearLayout>